マスターデータのデータベース連携
